RESOLVED FIXED42175
REGRESSION(55056) debug builds ASSERT falsely on pages with animations
https://bugs.webkit.org/show_bug.cgi?id=42175
Summary REGRESSION(55056) debug builds ASSERT falsely on pages with animations
James Robinson
Reported 2010-07-13 09:57:39 PDT
REGRESSION(55056) debug builds ASSERT falsely on pages with animations
Attachments
Patch (2.84 KB, patch)
2010-07-13 10:04 PDT, James Robinson
no flags
James Robinson
Comment 1 2010-07-13 10:03:00 PDT
The ASSERT()s in RenderObject::repaintAfterLayoutIfNeeded added by r55065 are failing on pages with animations if h/w compositing is not enabled. Looks like the same root issue as https://bugs.webkit.org/show_bug.cgi?id=37048.
James Robinson
Comment 2 2010-07-13 10:04:32 PDT
Simon Fraser (smfr)
Comment 3 2010-07-13 10:13:24 PDT
Comment on attachment 61390 [details] Patch OK, but I'd rather we fix the underlying cause (use some timestamp for all animation calculations within a given style change/layout).
James Robinson
Comment 4 2010-07-13 11:21:40 PDT
Comment on attachment 61390 [details] Patch Clearing flags on attachment: 61390 Committed r63226: <http://trac.webkit.org/changeset/63226>
James Robinson
Comment 5 2010-07-13 11:21:44 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.